# ps08-mcp

./: app.py  launcher.py  pyproject.toml  server.py
dni_mcp_server/: pyproject.toml  server.py
